--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
     background-image: url(../img/bg-body.jpg);
 }
+a, a:hover {
+    text-decoration: none;
+}
 #container {
     margin: 0 auto;
     width: 860px;
@@ -190,4 +193,72 @@ ul.socialicons {
     font-family: 'Oswald', sans-serif;
     font-size: 20px;
     margin-left: 7px;
+}
+#portfolio {
+    padding: 31px;
+}
+#portfolio-list {
+    width: 820px;
+    overflow: hidden;
+}
+#portfolio-list li {
+    float: left;
+    margin-right: 25px;
+    text-align: center;
+    background-color: #fbfbfb;
+    border-bottom: 1px solid #e5e5e5;
+    height: 185px;
+    margin-bottom: 30px;
+    width: 180px;
+}
+#portfolio-list li:hover {
+    border-bottom: 1px solid #cf455c;
+    height: 185px;
+}
+#portfolio-list img {
+    background-color: white;
+    height: 120px;
+    width: 185px;
+}
+#portfolio-list li:hover .title {
+    color: #cf455c;
+}
+#portfolio-list li .title {
+    font-size: 14px;
+    margin-top: 15px;
+    font-weight: 400;
+    color: #3a3a3a;
+}
+#portfolio-list li .categorie {
+    font-size: 11px;
+    line-height: 25px;
+    color: #999;
+}
+.cats-filter {
+    border-bottom: 1px solid #ededed;
+    overflow: hidden;
+    padding: 15px 0;
+}
+.cats-filter li a {
+    float: left;
+    margin-right: 7px;
+    color: white;
+    background-color: #777;
+    padding: 10px 10px;
+    margin-bottom: 5px;
+    font-family: 'Roboto Condensed', sans-serif;
+    text-transform: uppercase;
+    border-radius: 50px;
+}
+.cats-filter li a:hover {
+    text-decoration: none;
+}
+.cats-filter li a.current {
+    background-color: #cf45cc;
+}
+.extra-text {
+    font-family: 'Roboto Condensed', sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: #333 !important;
 }
